fix z-index in index di agencies

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -261,7 +261,7 @@ div.contenitore_altre_info {
     height: 33px;
     background-color: #ff0000;
     transform: rotate(45deg);
-    z-index: 999;
+    z-index: 998;
     color: white;
     font-weight: 600;
 }
